--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/GerenciadorDeCasamento
 excludes=
+file.reference.mysql-connector-java-8.0.12.jar=C:\\Users\\victo\\OneDrive\\Documentos\\ADS\\POO\\NetBeans\\JAR\\mysql-connector-java-8.0.12.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-8.0.12.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
