--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,11 +33,15 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/GerenciadorDeCasamento
 excludes=
+file.reference.itextpdf-5.2.0.jar=..\\..\\NetBeans\\JAR\\itextpdf-5.2.0.jar
 file.reference.mysql-connector-java-8.0.12.jar=C:\\Users\\victo\\OneDrive\\Documentos\\ADS\\POO\\NetBeans\\JAR\\mysql-connector-java-8.0.12.jar
+file.reference.mysql-connector-java-8.0.12.jar-1=..\\..\\..\\Desktop\\mysql-connector-java-8.0.12.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.12.jar}
+    ${file.reference.mysql-connector-java-8.0.12.jar}:\
+    ${file.reference.mysql-connector-java-8.0.12.jar-1}:\
+    ${file.reference.itextpdf-5.2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
